--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "devDependencies": {
     "axios": "^0.15.2",
     "jquery": "^3.1.0",
+    "bootstrap-sass": "^3.3.7",
+    "laravel-mix": "^0.7.4",
     "vue": "^2.0.1"
+  },
+  "dependencies": {
+    "object-assign": "^4.1.1"
   }
 }
