--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "devDependencies": {
     "axios": "^0.15.2",
     "jquery": "^3.1.0",
+    "noty": "*",
     "bootstrap-sass": "^3.3.7",
     "laravel-mix": "^0.7.4",
     "vue": "^2.0.1"
   },
   "dependencies": {
+    "laravel-echo": "^1.2.4",
     "object-assign": "^4.1.1"
   }
 }
